Bug 107119 - Fileopen: Docx generated form has frames overlapping table
Summary: Fileopen: Docx generated form has frames overlapping table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.0.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Frames
  Show dependency treegraph
 
Reported: 2017-04-12 12:56 UTC by Timur
Modified: 2024-12-17 10:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
compare fileopen in LO 4.2.3 and LO 5.4+.jpg (190.32 KB, image/jpeg)
2017-04-12 13:06 UTC, Timur
Details
Very simple reproducer document (12.42 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-05-19 14:10 UTC, NISZ LibreOffice Team
Details
Screenshot of the minimized document in Word and Writer (149.08 KB, image/png)
2020-05-19 14:10 UTC, NISZ LibreOffice Team
Details
Very simple reproducer document compared MSO LO (88.46 KB, image/png)
2020-05-29 20:41 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2017-04-12 12:56:24 UTC
Description:
Docx generated form with frames is not proper. 
Normally, this should not be reported like this "problem with document" but we'll hopefully see exactly what's the problem and maybe open a follow up bugs. 
This was reported in Bug 60957 with LO 3.4 for " user text field wrongly repeated many times" and it looked even worse. From 4.2.3 it looks differently. 

Steps to Reproduce:
1. open docx attachment 74944 [details] from Bug 60957
2. compare with pdf in attachment 74943 [details] from Bug 60957

Actual Results:  
As attached.

Expected Results:
As in PDF.


Reproducible: Always

User Profile Reset: Not related.

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:38.0) Gecko/20100101 Firefox/38.0
Comment 1 Timur 2017-04-12 13:06:44 UTC
Created attachment 132519 [details]
compare fileopen in LO 4.2.3 and LO 5.4+.jpg

No change since 4.2.3. Not a regression, never was fine.
Comment 2 Buovjaga 2017-04-12 15:00:49 UTC
I checked some frame-related docx fileopen bugs: https://bugs.documentfoundation.org/showdependencytree.cgi?id=104461&hide_resolved=1

Could the frames positioned wrong be the same problem as bug 92444?
Comment 3 Timur 2017-04-28 17:14:34 UTC
I don't know. Please confirm and hopefully someone will give better description.
Comment 4 Buovjaga 2017-04-28 17:31:56 UTC
Confirmed.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 9348b322a5c230dfcc2231661b73e480b130fcd9
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on April 28th 2016
Comment 5 QA Administrators 2018-04-29 02:30:13 UTC Comment hidden (obsolete)
Comment 6 Timur 2018-05-03 10:01:26 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2019-05-04 02:56:50 UTC Comment hidden (obsolete)
Comment 8 Timur 2019-05-06 09:48:56 UTC
Repro 6.3+
Comment 9 NISZ LibreOffice Team 2020-05-19 14:10:03 UTC
Created attachment 161009 [details]
Very simple reproducer document

The problem is that Frame objects in Word have two wrap settings:
- Yes : this value is not imported correctly, becomes Optimal Page Wrap instead of Page Wrap. Changing manually to this recreates the original look.
The example document in this bug has this default value set for all the frames. Export on the other hand is also broken, Page Wrap becomes No wrap after a save-reload.
- No: this value is imported correctly, but exported incorrectly - see bug #105035
Comment 10 NISZ LibreOffice Team 2020-05-19 14:10:26 UTC
Created attachment 161010 [details]
Screenshot of the minimized document in Word and Writer
Comment 11 Commit Notification 2020-05-25 08:13:48 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/358f654af36fa12102685237f6eadebae4610fb5

tdf#107119 DOCX import: fix parallel text wrap around frames

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Timur 2020-05-29 20:41:11 UTC
Created attachment 161404 [details]
Very simple reproducer document compared MSO LO

As seen in attachment, DOCX looks good in LO. 
DOC remains wrong and I'll report separately.