tdf#107119 DOCX import: fix parallel text wrap around frames

It was imported as "optimal page wrap" instead of parallel one,
resulting different page layout depending on the distance
of the frame object from the page margins.

Co-authored-by: Attila Bakos (NISZ)

Change-Id: I0db65c224f537bfd4f95ee073743a3d17d9e0e4d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94576
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>